--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -11,11 +11,26 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/README-"
 )
 ```
-# msaR
+# updates & new installation instructions
+This fork adjusts a few of the default settings in the msaR package.
+This version has NOT been committed to CRAN.
+To install this version:
+```
+git clone https://github.com/jkorstia/msaR.git
+R CMD INSTALL msaR
+```
+Or via [devtools](https://github.com/hadley/devtools)
+```
+devtools::install_github('jkorstia/msaR')
+```
 
-[![Travis Build Status](https://travis-ci.org/zachcp/msaR.svg?branch=master)](https://travis-ci.org/zachcp/msaR) 
-[![CRAN\_Status\_Badge](http://www.r-pkg.org/badges/version/msaR)](https://cran.r-project.org/package=msaR)
+Running msaR is easy:
+library(msaR)
+msaR("file.fa")
 
+Below is a truncated version of the original readme file:
+
+## msaR
 
 msaR is a an [htmlwidgets](https://github.com/ramnathv/htmlwidgets) wrapper of the [BioJS MSA viewer](https://github.com/wilzbach/msa) javascript library. msa will pass alignments to the BioJS MSA and has a convenience function that will handle the following formats:
 
@@ -25,35 +40,6 @@ msaR is a an [htmlwidgets](https://github.com/ramnathv/htmlwidgets) wrapper of t
 4. An XMultiple Alignment (Biostings) including "DNAMultipleAlignment","RNAMultipleAlignment", and"AAMultipleAlignment"
 
 Any of these types of objects can be passed to msaR to create an html widget. See [the online docs](https://zachcp.github.io/msaR/) for an interactive version of this widget.
-
-
-## Installation
-
-You can install msaR from github with:
-
-```{r gh-installation, eval = FALSE}
-install.packages("msaR")
-```
-
-## Example
-
-This is a basic example which shows you how to solve a common problem:
-
-```{r, eval=FALSE}
-library(msaR)
-
-# read some sequences from a multiple sequence alignment file and display
-seqfile <- system.file("sequences","AHBA.aln", package="msaR")
-msaR(seqfile)
-```
-
-![](man/figures/msaR_screenshot.png)
-
-
-All contributions are welcome! Please feel free to submit a pull request.
-
-### Support and Suggestions
-If you have any problem or suggestion please open an issue [here](https://github.com/zachcp/msaR/issues)
 
 ### License
 
